--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
       <p>Para mais informações, entre em contato conosco:</p>
       <p>Email: exemplo@empresa.com | Telefone: (XX) XXXX-XXXX</p>
     </div>
-    <a href="https://www.facebook.com" class="fa fa-facebook-official w3-hover-opacity" aria-hidden="true"></a>
-    <a href="https://www.instagram.com" class="fa fa-instagram w3-hover-opacity" aria-hidden="true"></a>
-    <a href="https://www.linkedin.com" class="fa fa-linkedin w3-hover-opacity" aria-hidden="true"></a>
-    <a href="https://twitter.com" class="fa fa-twitter w3-hover-opacity" aria-hidden="true"></a>
+       <a href="https://www.instagram.com/revise__aqui/" class="fa fa-instagram w3-hover-opacity" aria-hidden="true"></a>
     <p>Desenvolvido com <a href="https://codelsa.github.io/" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   </footer>
 
