--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large">
     <div class="contact-info">
       <p>Para mais informações, entre em contato conosco:</p>
-      <p>Email: exemplo@empresa.com | Telefone: (XX) XXXX-XXXX</p>
+      <p>Email: contatoreviseaqui@gmail.com | Telefone: (27) 99277-3767</p>
     </div>
        <a href="https://www.instagram.com/revise__aqui/" class="fa fa-instagram w3-hover-opacity" aria-hidden="true"></a>
     <p>Desenvolvido com <a href="https://codelsa.github.io/" target="_blank" class="w3-hover-text-green">w3.css</a></p>
