--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 <div class="w3-content" style="max-width:1500px">
     <header class="w3-panel w3-center w3-opacity" style="padding: 25px;">
-    <img class="revise-image" src="./image/revise aqui logo 2024.png" alt="">
+    <img class="revise-image" src="./revise aqui logo 2024.png" alt="">
     <p class="frase-efeito">Transformando o seu texto em Excelência Acadêmica.</p>
     <div class="w3-padding-32">
         <div class="w3-bar w3-border">
