--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="./icone upload.png" alt="Ícone revisão textual">
                     <h3>1 Envie seu Texto</h3>
                     <div class="service-description">
-                        Comece por enviar o seu documento através do nosso formulário.
+                        Submeta seu documento através do nosso formulário online. Um processo simples e inicial para a revisão textual.
                     </div>
                 </div>
             </a>
@@ -106,9 +106,9 @@
             <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline service-card-link">
                 <div class="service-card">
                     <img src="./icone formulario orçamento.png" alt="Icone prazo e serviço">
-                    <h3>2 Escolha o Prazo e Serviço</h3>
+                    <h3>2 Prazo e Serviço</h3>
                     <div class="service-description">
-                        Selecione o prazo de entrega que melhor se encaixa às suas necessidades e escolha entre nossos serviços de revisão.
+                        Escolha o prazo de entrega conforme suas necessidades e selecione o serviço de revisão desejado.
                     </div>
                 </div>
             </a>
@@ -116,9 +116,9 @@
             <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline service-card-link">
                 <div class="service-card">
                     <img src="./icone autorização.png" alt="Icone análise inicial">
-                    <h3>3 Receba a Análise Inicial</h3>
+                    <h3>3 Análise Inicial</h3>
                     <div class="service-description">
-                        Nosso revisor profissional analisará seu texto e solicitará informações adicionais ou esclarecimentos se necessário, para assegurar uma revisão alinhada ao seu objetivo. 
+                        Receba uma avaliação preliminar, que poderá requerer informações adicionais para uma revisão precisa.
                     </div>
                 </div>
             </a>
@@ -126,9 +126,9 @@
             <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline service-card-link">
                 <div class="service-card">
                     <img src="./icone conclusao.png" alt="Icone texto revisado">
-                    <h3>4 Obtenha seu Texto Revisado</h3>
+                    <h3>4 Texto Revisado</h3>
                     <div class="service-description">
-                        Após a revisão ser concluída dentro do prazo estabelecido, você receberá o texto revisado com as correções e sugestões aplicadas. Garantimos a confidencialidade e a integridade do seu conteúdo.
+                        Receba seu documento revisado, com garantia de confidencialidade e integridade, dentro do prazo.
                     </div>
                 </div>
             </a>
