--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
                 </a>
             </div>
 
+            <div class="service-card">
+                <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline">
+                    <img src="./icone tradução.png" alt="Icone tradução">
+                    <h3>Formatação</h3>
+                    <div class="service-description">
+                        Formatação detalhada conforme normas acadêmicas, com ajustes precisos em citações e layout, realizada por especialistas.
+                    </div>
+                </a>
+            </div>
+
             <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline">
                  <div class="service-card">                
                     <img src="./icone consultoria.png" alt="Icone consultoria">
