--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
     <p class="frase-efeito">Transformando o seu texto em Excelência Acadêmica.</p>
     <div class="w3-padding-32">
         <div class="w3-bar w3-border">
-          <a href="#" class="w3-bar-item w3-button">Sobre nós</a>
-          <a href="#" class="w3-bar-item w3-button">Serviços</a>
-          <a href="#" class="w3-bar-item w3-button w3-light-grey">Como funciona?</a>
+          <a href="#serviço" class="w3-bar-item w3-button">Serviços</a>
+          <a href="#funciona" class="w3-bar-item w3-button w3-light-grey">Como funciona?</a>
           <a href="https://wa.me/5527992773767?text=Olá,%20eu%20gostaria%20de%20saber%20mais%20sobre%20seus%20serviços" target="_blank" class="w3-bar-item w3-button">Contato</a>
         </div>
       </div>
     </header>
     <div class="services-section">
-        <h2 class="services-title">Serviços que oferecemos</h2>
+        <h2 class="services-title" id="serviço">Serviços que oferecemos</h2>
         <div class="services-container">
             <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline service-card-link">
             <div class="service-card">
@@ -101,7 +100,7 @@
     </div>
 
     <div class="services-section2">
-        <h2 class="services-title">Como funciona?</h2>
+        <h2 class="services-title" id="funciona">Como funciona?</h2>
         <div class="services-container">
             <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline service-card-link">
             <div class="service-card">
@@ -145,7 +144,7 @@
         </div>
     </div>
        
- <h2 class="services-title">Por que optar pelos nossos serviços de edição?</h2>
+ <h2 class="services-title" id="optar">Por que optar pelos nossos serviços de edição?</h2>
         <div class="services-container">
             <div class="service-card">
                 <img src="./icone garantia e qualidade.png" alt="icone de garantia de qualidade">
