--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="service-card">
                 <a href="https://forms.gle/JVodZtf5PhnBFMu2A" target="_blank" class="no-underline">
-                    <img src="./icone tradução.png" alt="Icone tradução">
+                    <img src="./iconeformatacao.png" alt="Icone tradução">
                     <h3>Formatação</h3>
                     <div class="service-description">
                         Formatação detalhada conforme normas acadêmicas, com ajustes precisos em citações e layout, realizada por especialistas.
