--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
     .start-btn { margin-top: 40px; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; transition: background-color 0.3s; }
     .start-btn:hover { background-color: #0056b3; }
     .no-underline {text-decoration: none; /* Remove o sublinhado */ color: inherit; /* Mantém a cor do texto igual ao resto do conteúdo, não a cor do link */}
+    @media screen and (max-width: 600px) {
+    .service-card, .how-works, .como-funciona {
+        width: 100%;
+        margin: 10px 0;
+    }
+    .services-intro {
+        padding: 20px;
+    }
+    /* Outros ajustes para telas pequenas */
+}
+
 </style>
 </head>
 <body>
