--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <img src="./icone upload.png" alt="Ícone revisão textual">
                     <h3>1 Envie seu Texto</h3>
                     <div class="service-description">
-                        Submeta seu documento através do nosso formulário online. Estamos disponíveis também via e-mail ou WhatsApp.
+                        Submeta seu documento pelo formulário online. Estamos disponíveis também via e-mail ou WhatsApp.
                     </div>
                 </div>
             </a>
