--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <img src="./icone garantia e qualidade.png" alt="icone de garantia de qualidade">
                 <h3>Garantia de Qualidade</h3>
                 <div class="service-description">
-                    Garantimos excelência e rapidez em todos os nossos serviços, com reedição grátis ou reembolso total se o seu manuscrito editado for rejeitado por falhas na qualidade do idioma.
+                    Garantimos excelência e rapidez em todos os nossos serviços. Caso o manuscrito editado não seja aceito por questões de qualidade linguística, providenciaremos uma reedição sem custos.
                 </div>
             </div>
             <div class="service-card">
